Init lab3